tested fix for IE popover and overflow of text on popover

--- a/public/bootstrap/less/trp3.less
+++ b/public/bootstrap/less/trp3.less
@@ -162,7 +162,7 @@ label {
   margin-bottom: 15px;
   box-shadow: none;
   display: inline-block;
-  padding: 9px;
+  padding: 0px 9px;
   border: 1px solid @trpGrey;
   background-color: fade(@trpGrey, 50%);
   border-radius: 4px;
@@ -2220,7 +2220,7 @@ ul.trpUserDetails {
   margin-bottom: 0;
 
   & li {
-    width: 100%;
+    max-width: 100%;
     padding: 2px 0 2px 20px;
     overflow-x: hidden;
     font-size: 14px;
